# test

./: CMakeLists.txt
cmake/: CodeCoverage.cmake  gtest.cmake
src/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
test/: CMakeLists.txt  tst_lib.cpp
